--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -16,20 +17,27 @@
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "joi": "^17.13.3",
+    "jsonpath": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mustache": "^4.2.0",
     "mysql2": "^3.15.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.23",
     "@types/express-session": "^1.18.2",
+    "@types/jsonpath": "^0.2.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^20.19.21",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
