--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -16,9 +16,11 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
+    "form-data": "^4.0.5",
     "joi": "^17.13.3",
     "jsonpath": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mustache": "^4.2.0",
     "mysql2": "^3.15.2",
     "node-cron": "^4.2.1",
@@ -26,19 +28,21 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.23",
     "@types/express-session": "^1.18.2",
+    "@types/form-data": "^2.2.1",
     "@types/jsonpath": "^0.2.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/mustache": "^4.2.6",
     "@types/node": "^20.19.21",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.20",
+    "ngrok": "^5.0.0-beta.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
